# ciencia-de-dados-2

./: README.md  airport_location.csv  eda.ipynb  main.py  noise.ipynb  noise_models.ipynb  pyproject.toml  requirements.txt  urban_classificacao.ipynb  urban_regressao.ipynb
